[package]
name = "tyange-cms-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
bcrypt = "0.17.0"
poem = { version = "3.1.7", features = [
    "multipart",
] }
serde = { version = "1.0.219", features = [
    "derive",
] }
sqlx = { version = "0.8.3", features = [
    "sqlite",
    "runtime-tokio",
] }
tokio = { version = "1.44.1", features = [
    "rt-multi-thread",
] }

[dependencies.uuid]
version = "1.16.0"
# Lets you generate random UUIDs
features = [
    "v4",
]
